--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,13 @@
 			<url>https://repository.mulesoft.org/releases/</url>
 			<layout>default</layout>
 		</repository>
+		<repository>
+
+<id>Nexus</id>
+<name>Nexus Public Repository</name>
+<url>https://repository-master.mulesoft.org/nexus/content/groups/public/</url>
+<layout>default</layout>
+</repository>
 	</repositories>
 
 	<pluginRepositories>
