--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Build and deploy artifact to sandbox
 #run the maven deploy lifecycle. The -B indicated a batch process,
 #which reduces the amount of logging the deployment does
-        run: mvn -B deploy -DmuleDeploy -s .maven/settings.xml
+        run: mvn -B deploy -DmuleDeploy -Dusername-$"PLATFORM_USERNAME" -Dpassword-$"PLATFORM_PASSWORD -s .maven/settings.xml
 #Pass in the secrets we need for deployment as environment variables
         env:
           NEXUS_USERNAME: ${{ secrets.NEXUS_USERNAME }}
