--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,19 @@
 			<version>1.0.3</version>
 			<classifier>mule-plugin</classifier>
 		</dependency>
+
+		<dependency>
+   <groupId>org.mule.connectors</groupId>
+   <artifactId>mule-http-connector</artifactId>
+   <version>1.6.0</version>
+   <classifier>mule-plugin</classifier>
+  </dependency>
+  <dependency>
+   <groupId>org.mule.connectors</groupId>
+   <artifactId>mule-sockets-connector</artifactId>
+   <version>1.2.2</version>
+   <classifier>mule-plugin</classifier>
+  </dependency>
 	</dependencies>
 
 	<repositories>
