--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 		<app.runtime>4.4.0-20230320</app.runtime>
 		<mule.maven.plugin.version>4.0.0</mule.maven.plugin.version>
 
-		
+	
 
 	</properties>
 
@@ -91,24 +91,10 @@
 			<version>1.0.3</version>
 			<classifier>mule-plugin</classifier>
 		</dependency>
-
-		<dependency>
-   <groupId>org.mule.connectors</groupId>
-   <artifactId>mule-http-connector</artifactId>
-   <version>1.6.0</version>
-   <classifier>mule-plugin</classifier>
-  </dependency>
-  <dependency>
-   <groupId>org.mule.connectors</groupId>
-   <artifactId>mule-sockets-connector</artifactId>
-   <version>1.2.2</version>
-   <classifier>mule-plugin</classifier>
-  </dependency>
 	</dependencies>
 
 	<repositories>
-
-<repository>
+		<repository>
 			<id>anypoint-exchange-v3</id>
 			<name>Anypoint Exchange</name>
 			<url>https://maven.anypoint.mulesoft.com/api/v3/maven</url>
@@ -120,7 +106,15 @@
 			<url>https://repository.mulesoft.org/releases/</url>
 			<layout>default</layout>
 		</repository>
+		<repository>
 
+<id>Nexus</id>
+
+<name>Nexus Public Repository</name>
+
+<url>https://repository-master.mulesoft.org/nexus/content/groups/public/</url>
+
+<layout>default</layout>
 
 </repository>
 	</repositories>
