--- a/.github/workflows/deployt.yml
+++ b/.github/workflows/deployt.yml
@@ -1,68 +1,45 @@
-name: Build and Deploy to Sandbox
+name: Sandbox - Build and Deploy
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-    
+    branches: sandbox 
+#normally you wouldn't be deploying master branch pushes to Sandbox,
+#but we're keeping things simple! 😁
+
+#setup enviroment variables using github secrets that will be utilized for setting.xml and pom.xml
+env:
+  NEXUS_USERNAME: ${{ secrets.NEXUSUSERNAME }}
+  NEXUS_PASSWORD: ${{ secrets.NEXUSPASSWORD }}
+  PLATFORM_USERNAME: ${{ secrets.PLATFORMUSERNAME }}
+  PLATFORM_PASSWORD: ${{ secrets.PLATFORMPASSWORD }}
+  ENVIRONMENT: ${{ secrets.ENVIRONMENT}}
+
 jobs:
-  build:
+  BuildAndDeployToDev:
     runs-on: ubuntu-latest
+    environment:
+      name: Sandbox
     steps:
-    - name: Checkout this repo
-      uses: actions/checkout@v3
-    - name: Cache dependencies
-      uses: actions/cache@v3
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'zulu'
-        java-version: 11
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
-    - name: Stamp artifact file name with commit hash
-      run: |
-        artifactName1=$(ls target/*.jar | head -1)
-        commitHash=$(git rev-parse --short "$GITHUB_SHA")
-        artifactName2=$(ls target/*.jar | head -1 | sed "s/.jar/-$commitHash.jar/g")
-        mv $artifactName1 $artifactName2
-    - name: Upload artifact 
-      uses: actions/upload-artifact@v3
-      with:
-          name: artifacts
-          path: target/*.jar
-        
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:    
-    - name: Checkout this repo
-      uses: actions/checkout@v3
-    - name: Cache dependencies
-      uses: actions/cache@v3
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
-    - uses: actions/download-artifact@v3
-      with:
-        name: artifacts
-    - name: Deploy to Sandbox
-      env:
-        PLATFORM_USERNAME: ${{ secrets.PLATFORM_USERNAME }}
-        PLATFORM_PASSWORD: ${{ secrets.PLATFORM_USERNAME }}
-        NEXUS_USERNAME: ${{ secrets.NEXUS_USERNAME }}
-        NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
-      run: |
-        artifactName=$(ls *.jar | head -1)
-        mvn deploy -DmuleDeploy \
-         -Dmule.artifact=$artifactName \
-         -Danypoint.username="$PLATFORM_USERNAME" \
-         -Danypoint.password="$PLATFORM_PASSWORD"  \
+#first, we need to checkout our mule application's branch code
+      - name: Checkout repository
+        uses: actions/checkout@v2
+#second, cache dependencies, No need to download every time
+      - name: cache dependencies
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+          cache: maven
+#third, build with Maven
+      - name: Build with Maven
+        run: mvn -B clean package -s .maven/settings.xml
+#fourth, upload artifact, to utilize for other repo.(optional)
+      - name: upload Artifact
+        run: mkdir staging && cp target/*.jar staging
+      - uses: actions/upload-artifact@v2
+        with:
+          name: Package
+          path: staging
+#fifth, Deploy with Maven
+      - name: Deploy
+        run: mvn -B deploy -DmuleDeploy -s .maven/settings.xml
