--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -1,28 +1,59 @@
-name: Sandbox - Build and Deploy
+name: Java CI with Maven
 
 on:
   push:
-    branches: master
-#normally you wouldn't be deploying master branch pushes to Sandbox,
-#but we're keeping things simple! 😁
+    branches: ["main"]
+  pull_request:
+    branches: ["main"]
 
 jobs:
-  buildAndDeploy:
+  build:
     runs-on: ubuntu-latest
     steps:
-#first, we need to checkout our mule application's code
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Build and deploy artifact to sandbox
-#run the maven deploy lifecycle. The -B indicated a batch process,
-#which reduces the amount of logging the deployment does
-        run: mvn -B deploy -DmuleDeploy -s .maven/settings.xml
-#Pass in the secrets we need for deployment as environment variables
+      - uses: actions/checkout@v3
+      - uses: actions/cache@v3
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+      - name: Set up JDK 8
+        uses: actions/setup-java@v3
+        with:
+          java-version: '8'
+          distribution: 'temurin'
+      #    distribution: 'temurin'
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
+      - name: Stamp artifact file name with commit hash
+        run: |
+          artifactName1=$(ls target/*.jar | head -1)
+          commitHash=$(git rev-parse --short "$GITHUB_SHA")
+          artifactName2=$(ls target/*.jar | head -1 | sed "s/.jar/.$commitHash.jar/g")
+          mv $artifactName1 $artifactName2
+      - uses: actions/upload-artifact@master
+        with:
+          name: artifacts
+          path: target/*.jar
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/cache@v3
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+      - uses: actions/download-artifcat@master
+        with:
+          name: artifacts
+      - name: Deploy to Cloudhub Dev env
         env:
-          NEXUS_USERNAME: ${{ secrets.NEXUS_USERNAME }}
-          NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
-          PLATFORM_USERNAME: ${{ secrets.PLATFORM_USERNAME }}
-          PLATFORM_PASSWORD: ${{ secrets.PLATFORM_PASSWORD }}
-          SANDBOX_CLIENT_ID: ${{ secrets.SANDBOX_CLIENT_ID }}
-          SANDBOX_CLIENT_SECRET: ${{ secrets.SANDBOX_CLIENT_SECRET }}
-          BUS_GROUP_ID: ${{ secrets.BUS_GROUP_ID }}
+          anypointUsername: ${{ secrets.ANYPOINT_USERNAME }}
+          anypointPassword: ${{ secrets.ANYPOINT_PASSWORD }}
+        run: |
+          artifactName=$(ls *.jar | head -1)
+          mvn deploy -DmuleDeploy -Dmule.artifactName -Danypoint.username="$anypointUser" -Danypoint.Password="$anypointPassword" -DworkerType=MICRO -Dregion=us-east-2 Denvironment=Dev -Dcloudhub.application.name=qwikcilver-app-123
