--- a/pom.xml
+++ b/pom.xml
@@ -35,29 +35,21 @@
 				<version>${mule.maven.plugin.version}</version>
 				<extensions>true</extensions>
 				<configuration>
-					<cloudHubDeployment>
-						<uri>https://anypoint.mulesoft.com</uri>
-						<muleVersion>${app.runtime}</muleVersion>
-						<username>${username}</username>
-						<password>${password}</password>
-						<applicationName>${cloudhub.application.name}</applicationName>
-						<environment>${environment}</environment>
-						<workers>${workers}</workers>
-						<workerType>${workerType}</workerType>
-						<objectStoreV2>true</objectStoreV2>
-						<region>${region}</region>
-						<businessGroupId>${env.BUS_GROUP_ID}</businessGroupId>
-					</cloudHubDeployment>
-
-
-
-					<sharedLibraries>
-						<sharedLibrary>
-							<groupId>net.snowflake</groupId>
-							<artifactId>snowflake-jdbc</artifactId>
-						</sharedLibrary>
-					</sharedLibraries>
-				</configuration>
+				    <cloudHubDeployment>
+					      <uri>https://anypoint.mulesoft.com</uri>
+					      <muleVersion>${app.runtime}</muleVersion>
+					      <username>${username}</username>
+					      <password>${password}</password>
+					      <applicationName>${cloudhub.application.name}</applicationName>
+					      <environment>${environment}</environment>
+					      <region>${region}</region>
+					      <workers>${workers}</workers>
+					      <workerType>${workerType}</workerType>
+					      <properties>
+					        <key>value</key>
+					      </properties>
+					    </cloudHubDeployment>
+				  </configuration>
 			</plugin>
 		</plugins>
 	</build>
