--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -56,4 +56,4 @@ jobs:
           anypointPassword: ${{ secrets.ANYPOINT_PASSWORD }}
         run: |
           artifactName=$(ls *.jar | head -1)
-          mvn deploy -DmuleDeploy -Dmule.artifactName -Danypoint.username=mskd -Danypoint.Password=Tirupati@360 -DworkerType=MICRO -Dregion=us-east-2 -Denvironment=Sandbox -Dcloudhub.application.name=snowflake
+          mvn deploy -DmuleDeploy -Dmule.artifactName -Danypoint.username=mskd -Danypoint.Password=Tirupati@360 -Dmule.version=4.4.0 -DworkerType=MICRO -Dregion=us-east-2 -Denvironment=Sandbox -Dcloudhub.application.name=snowflake
